[package]
name    = "perceptual-audio-visualizer"
version = "0.1.0"
edition = "2024"

[dependencies]
gammachirp-rs = { path = "gammachirp" }
eframe = "0.35"
rodio = { version = "0.22", features = [
	"dither",
	"playback",
	"symphonia-all",
], default-features = false }
memmap2 = "0.9"
rfd = "0.17"
bytemuck = "1"
ndarray = "0.17"

[profile.dev]
opt-level = 3
